--- a/package.json
+++ b/package.json
@@ -11,24 +11,25 @@
   "author": "Yashanovsky Sergey",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/plugin-proposal-class-properties": "^7.10.1",
-    "@babel/plugin-proposal-private-methods": "^7.10.1",
-    "@babel/preset-env": "^7.10.2",
-    "autoprefixer": "^9.8.0",
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-private-methods": "^7.10.4",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-typescript": "^7.10.4",
+    "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
-    "browser-sync": "^2.26.7",
-    "css-loader": "^3.5.3",
+    "browser-sync": "^2.26.12",
+    "css-loader": "^4.3.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.8.1",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^7.0.0-beta.3",
-    "file-loader": "^6.0.0",
+    "file-loader": "^6.1.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.0",
-    "gulp-babel": "^8.0.0",
     "gulp-cache": "^1.1.3",
     "gulp-clean-css": "^4.3.0",
     "gulp-htmlmin": "^5.0.1",
@@ -42,19 +43,21 @@
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
     "imagemin-jpeg-recompress": "^7.0.0",
-    "imagemin-pngquant": "^8.0.0",
-    "postcss-loader": "^3.0.0",
+    "imagemin-pngquant": "^9.0.0",
+    "postcss-loader": "^4.0.0",
     "prettier": "2.1.1",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "^10.0.2",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^4.1.0",
+    "ts-loader": "^8.0.3",
+    "typescript": "^4.0.2",
     "url-loader": "^4.1.0",
     "vargs": "^0.1.0",
     "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^4.43.0",
+    "webpack": "^4.44.1",
     "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-cli": "^3.3.11",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.1.3"
   },
@@ -68,9 +71,13 @@
     "gulp:server": "gulp"
   },
   "dependencies": {
-    "bootstrap": "^4.5.0",
+    "@babel/plugin-proposal-decorators": "^7.10.5",
+    "bootstrap": "^4.5.2",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
-    "vue": "^2.6.12"
+    "vue": "^2.6.12",
+    "vue-class-component": "^7.2.5",
+    "vue-property-decorator": "^9.0.0",
+    "vuex": "^3.5.1"
   }
 }
